--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rollup-plugin-img",
-  "version": "1.1.0",
+  "name": "@lomray/rollup-plugin-img",
+  "version": "1.2.0",
   "description": "import image files with rollup",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
